--- a/infra/datadog/release/external-secret-datadog-credentials.yaml
+++ b/infra/datadog/release/external-secret-datadog-credentials.yaml
@@ -14,9 +14,9 @@ spec:
     template:
       type: Opaque
   data:
-    - secretKey: datadog-api-key
+    - secretKey: api-key
       remoteRef:
-        key: api-key
-    - secretKey: datadog-app-key
+        key: datadog-api-key
+    - secretKey: app-key
       remoteRef:
-        key: app-key
+        key: datadog-app-key
