--- a/clusters/homelab/agent/cluster-agent.yaml
+++ b/clusters/homelab/agent/cluster-agent.yaml
@@ -2,6 +2,7 @@ kind: "DatadogAgent"
 apiVersion: "datadoghq.com/v2alpha1"
 metadata:
   name: "datadog"
+  namespace: "datadog"
 spec:
   global:
     site: "us5.datadoghq.com"
