fix credentials for datadog agent

--- a/clusters/homelab/agent/cluster-agent.yaml
+++ b/clusters/homelab/agent/cluster-agent.yaml
@@ -9,6 +9,14 @@ spec:
     clusterName: "homelab-cluster"
     tags:
       - "env:homelab"
+    credentials:
+      apiSecret:
+        secretName: "datadog-credentials"
+        keyName: "api-key"
+      appSecret:
+        secretName: "datadog-credentials"
+        keyName: "app-key"
+
   features:
     otelCollector:
       enabled: true
