add watch ns to the operator

--- a/infra/datadog/release/helmrelease.yaml
+++ b/infra/datadog/release/helmrelease.yaml
@@ -39,6 +39,10 @@ spec:
       enabled: true
     remoteConfiguration:
       enabled: true
+    
+    watchNamespaces:
+      - "datadog"
+      - "kube-system"
 
     datadogCRDs:
       crds:
