--- a/infra/datadog/release/helmrelease.yaml
+++ b/infra/datadog/release/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
         kind: HelmRepository
         name: datadog
         namespace: flux-system
-      version: "2.15.0-dev.2"
+      version: "2.14.3"
   install:
     createNamespace: false
     remediation:
