--- a/infra/tekton/ingress.yaml
+++ b/infra/tekton/ingress.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   ingressClassName: "tailscale"
   rules:
-    - http:
+    - host: tekton.tailc27027.ts.net
+      http:
         paths:
           - path: /
             pathType: Prefix
