--- a/infra/tekton/config.yaml
+++ b/infra/tekton/config.yaml
@@ -4,7 +4,7 @@ metadata:
   name: config
   namespace: tekton
 spec:
-  profile: all
+  profile: 'all'
   targetNamespace: tekton
   pruner:
     resources:
