--- a/clusters/homelab/kustomizations.yaml
+++ b/clusters/homelab/kustomizations.yaml
@@ -511,21 +511,21 @@ spec:
 
 ---
 
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: tekton-operator
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: ./infra/tekton
-  prune: true
-  wait: false
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  dependsOn:
-    - name: tekton-subscriptions
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: tekton-operator
+#   namespace: flux-system
+# spec:
+#   interval: 10m
+#   path: ./infra/tekton
+#   prune: true
+#   wait: false
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   dependsOn:
+#     - name: tekton-subscriptions
 
 
 ---
