--- a/clusters/homelab/kustomizations.yaml
+++ b/clusters/homelab/kustomizations.yaml
@@ -492,21 +492,21 @@ spec:
 
 
 
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: tekton-subscriptions
-  namespace: flux-system
-spec:
-  interval: 10m
-  path: ./infra/olm/subscriptions/tekton
-  prune: true
-  wait: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  dependsOn:
-    - name: olm-resources
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: tekton-subscriptions
+#   namespace: flux-system
+# spec:
+#   interval: 10m
+#   path: ./infra/olm/subscriptions/tekton
+#   prune: true
+#   wait: true
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
+#   dependsOn:
+#     - name: olm-resources
 
 
 ---
