--- a/infra/tekton/config.yaml
+++ b/infra/tekton/config.yaml
@@ -7,6 +7,7 @@ spec:
   profile: 'all'
   targetNamespace: tekton
   pruner:
+    disable: true
     resources:
       - pipelinerun
       - taskrun
