--- a/clusters/homelab/personal-site/ingress.yaml
+++ b/clusters/homelab/personal-site/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: personal-site-ingress
+  name: personal-site
   annotations:
     tailscale.com/funnel: "true"
     tailscale.com/hostname: "jwhiteaker-personal-site"
