add ingress annotation for cert manager to handle cert piece

--- a/infra/rancher/helmrelease.yaml
+++ b/infra/rancher/helmrelease.yaml
@@ -16,3 +16,6 @@ spec:
         namespace: flux-system
   values:
     hostname: rancher.kubesoar.com
+    ingress:
+      extraAnnotations:
+        cert-manager.io/cluster-issuer: homelab-issuer
