--- a/infra/rancher/helmrelease.yaml
+++ b/infra/rancher/helmrelease.yaml
@@ -17,5 +17,6 @@ spec:
   values:
     hostname: rancher.kubesoar.com
     ingress:
+      includeDefaultExtraAnnotations: false
       extraAnnotations:
         cert-manager.io/cluster-issuer: homelab-issuer
