make small change to ingress (not needed but want flux to resync this)

--- a/infra/rancher/helmrelease.yaml
+++ b/infra/rancher/helmrelease.yaml
@@ -20,3 +20,4 @@ spec:
       includeDefaultExtraAnnotations: false
       extraAnnotations:
         cert-manager.io/cluster-issuer: homelab-issuer
+        cert-manager.io/issuer-type: ClusterIssuer
